Added  README.md,index.html,styles.css and Imgs folder.

--- a/index.html
+++ b/index.html
@@ -3,10 +3,31 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport content=width=device-width, initial-scale=1.0">
-        <title>Document</title>
+        <title>Filipino Cuisine Gallery</title>
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        
+        <div class="first">
+            <div class="header">
+                <h1 class="title">Filipino Cuisine Gallery</h1>
+                    <div class="links">
+                        <ul>
+                            <li>Home</li>
+                            <li>Contact</li>
+                            <li>About</li>
+                        </ul>
+                    </div>
+            </div>
+            <div class="container">
+                <div class="info">
+                    <h2 class="hero">Discover Filipino Flavors: A Taste of Joy!</h2>
+                    <p class="text">Dive into the diverse world of Filipino cuisine, where every dish is a tapestry of flavors, colors, and stories waiting to be explored.</p>
+                    <button class="button">Gallery</button>
+                </div>
+                <div class="logo"><img src="Imgs/food.jpg" alt="logo" width="350" height="300"></div>
+            </div>  
+        </div>
+
     </body>
 </html>
 
