--- a/index.html
+++ b/index.html
@@ -24,8 +24,26 @@
                     <p class="text">Dive into the diverse world of Filipino cuisine, where every dish is a tapestry of flavors, colors, and stories waiting to be explored.</p>
                     <button class="button">Gallery</button>
                 </div>
-                <div class="logo"><img src="Imgs/food.jpg" alt="logo" width="350" height="300"></div>
+                <div class="logo"><img src="Imgs/food.jpg" alt="filipino food" width="350" height="300"></div>
             </div>  
+        </div>
+        <div class="second">
+            <div>
+                <p>4 Famous Cuisine of the Philippines, that even foreigners craves! </p>
+            </div>
+            <div>
+                <ul>
+                    <li><img src="Imgs/lechon.jpg" alt="roasted pig"></li>
+                    <p>Lechon Baboy is a popular Filipino dish consisting of a whole roasted pig. It's centerpiece of many celebrations and gatherings, known for its crispy skin and succulent meat.</p>
+                    <li><img src="Imgs/bulalo.jpg" alt="bulalo"></li>
+                    <p>It is called "Bulalo" in the Philippines, it has rich and flavorful broth, tender beef shanks, and marrow-filled bones.</p>
+                    
+                </ul>
+            </div>
+
+
+
+
         </div>
 
     </body>
