added new images, and finished 3rd section

--- a/index.html
+++ b/index.html
@@ -24,26 +24,28 @@
                     <p class="text">Dive into the diverse world of Filipino cuisine, where every dish is a tapestry of flavors, colors, and stories waiting to be explored.</p>
                     <button class="button">Gallery</button>
                 </div>
-                <div class="logo"><img src="Imgs/food.jpg" alt="filipino food" width="350" height="300"></div>
+                <div><img src="Imgs/food.jpg" alt="filipino food" width="350" height="300"></div>
             </div>  
         </div>
-        <div class="second">
-            <div>
-                <p>4 Famous Cuisine of the Philippines, that even foreigners craves! </p>
+        <div>   
+            <div class="second">
+                <p>Famous Cuisines of the Philippines</p>
             </div>
-            <div>
+            <div class="seconds">
                 <ul>
-                    <li><img src="Imgs/lechon.jpg" alt="roasted pig"></li>
-                    <p>Lechon Baboy is a popular Filipino dish consisting of a whole roasted pig. It's centerpiece of many celebrations and gatherings, known for its crispy skin and succulent meat.</p>
-                    <li><img src="Imgs/bulalo.jpg" alt="bulalo"></li>
-                    <p>It is called "Bulalo" in the Philippines, it has rich and flavorful broth, tender beef shanks, and marrow-filled bones.</p>
-                    
+                    <li><img src="Imgs/lechon.jpg" alt="lechon baboy"  width="200" height="150"><p class="details">"Lechon Baboy" is a popular Filipino dish consisting of a whole roasted pig. It's centerpiece of many celebrations and gatherings, known for its crispy skin and succulent meat.</p></li>
+                    <li><img src="Imgs/bulalo.jpg" alt="bulalo"  width="200" height="150"><p class="details">It is called "Bulalo" in the Philippines, it has rich and flavorful broth, tender beef shanks, and marrow-filled bones.</p></li>
+                    <li><img src="Imgs/sisig.jpg" alt="sizzling sisig"  width="200" height="150"><p class="details">Known as "Sizzling Sisig with egg" is a delicious Filipino dish made from chopped and seasoned pork face, ears and liver. Enjoyed as a main course or as a tasty appetizer.</p>
+                    <li><img src="Imgs/lumpia.jpg" alt="lumpia"  width="200" height="150"><p class="details">Filipino spring rolls or known as "Lumpia", imagine biting into crispy, golden-brown spring roll filled with a savory medley of vegetables, meat, and spices - a burst of flavor in every bite. </p></li>
                 </ul>
             </div>
-
-
-
-
+        </div>
+        <div class="third">
+            <p class="quote"><em>"In the heart of every Filipino dish lies a story of resilience, resourcefulness, and the love for good food shared with family and friends."</em></p>
+            <p class="unknown">-Unknown</p>
+        </div>  
+        <div>
+            
         </div>
 
     </body>
