added README.md, index.html and style.css!

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             </div>
             <div class="seconds">
                 <ul>
-                    <li><img src="Imgs/lechon.jpg" alt="lechon baboy"  width="200" height="150"><p class="details">"Lechon Baboy" is a popular Filipino dish consisting of a whole roasted pig. It's centerpiece of many celebrations and gatherings, known for its crispy skin and succulent meat.</p></li>
+                    <li><img src="Imgs/lechon.jpg" alt="lechon baboy"  width="200" heUnknownight="150"><p class="details">"Lechon Baboy" is a popular Filipino dish consisting of a whole roasted pig. It's centerpiece of many celebrations and gatherings, known for its crispy skin and succulent meat.</p></li>
                     <li><img src="Imgs/bulalo.jpg" alt="bulalo"  width="200" height="150"><p class="details">It is called "Bulalo" in the Philippines, it has rich and flavorful broth, tender beef shanks, and marrow-filled bones.</p></li>
                     <li><img src="Imgs/sisig.jpg" alt="sizzling sisig"  width="200" height="150"><p class="details">Known as "Sizzling Sisig with egg" is a delicious Filipino dish made from chopped and seasoned pork face, ears and liver. Enjoyed as a main course or as a tasty appetizer.</p>
                     <li><img src="Imgs/lumpia.jpg" alt="lumpia"  width="200" height="150"><p class="details">Filipino spring rolls or known as "Lumpia", imagine biting into crispy, golden-brown spring roll filled with a savory medley of vegetables, meat, and spices - a burst of flavor in every bite. </p></li>
@@ -41,11 +41,24 @@
             </div>
         </div>
         <div class="third">
-            <p class="quote"><em>"In the heart of every Filipino dish lies a story of resilience, resourcefulness, and the love for good food shared with family and friends."</em></p>
-            <p class="unknown">-Unknown</p>
+            <div>
+                <p class="quote"><em>"In the heart of every Filipino dish lies a story of resilience, resourcefulness, and the love for good food shared with family and friends."</em></p>
+            </div>
+            <div>
+                <p class="unknown">-Anonymous</p>
+            </div>
         </div>  
-        <div>
-            
+        <div class="fourth">
+            <div>
+                <p class="start">It's time to start cooking!</p>
+                <p class="sign">Sign up to get the recipe by clicking that button right over there!</p>
+            </div>
+            <div>
+                <button class="buttons">Sign up</button>
+            </div>
+        </div>
+        <div class="fifth">
+            <p>Copyright &#169 Filipino Cuisine 2024</p>
         </div>
 
     </body>
